--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
               uses: actions/setup-python@v2
               with:
                   python-version: '3.10'
+            - name: Workaround for issue #1
+              run: |
+                pip install setuptools==60.10.0
             - uses: pre-commit/action@v2.0.0
 
     test-package:
