--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    pika==1.2.1
+    pydantic==1.9.0
     requests~=2.26.0
 python_requires = >=3.8
 
