--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    pydantic==1.9.0
     requests~=2.26.0
 python_requires = >=3.7
 
