--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    fastapi==0.75.2
     pydantic==1.9.0
     requests~=2.26.0
 python_requires = >=3.10
