--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,15 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    email-validator==1.2.1
     fastapi==0.75.2
     pydantic==1.9.0
     requests~=2.26.0
 python_requires = >=3.10
+
+[options.entry_points]
+console_scripts =
+    sync-openapi-spec = marketplace.pre_commit_hooks.sync_openapi_spec:main
 
 [options.extras_require]
 dev =
