--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ recursive-exclude tests *
 
 exclude .pre-commit-config.yaml
 exclude .gitlab-ci.yml
+exclude .pre-commit-hooks.yaml
 
 include LICENSE
 include README.md
