--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,11 @@
 exclude tests
 recursive-exclude tests *
+exclude examples
+recursive-exclude examples *
 
 exclude .pre-commit-config.yaml
 exclude .gitlab-ci.yml
 
 include LICENSE
 include README.md
-include examples/mp_api.py
-include examples/rpc_server.py
 recursive-include logos *.png
