--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    marketplace-standard-app-api==0.1.0
     pika==1.2.1
     pydantic==1.9.0
     requests~=2.26.0
