--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,3 +41,9 @@ repos:
       hooks:
           - id: isort
             args: [--profile, black, --filter-files]
+
+    - repo: https://github.com/asottile/pyupgrade
+      rev: v2.32.1
+      hooks:
+          - id: pyupgrade
+            args: [--py38-plus]
