Add message broker module (#11)

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    marketplace-standard-app-api==0.1.0
+    pika==1.2.1
     requests~=2.26.0
 python_requires = >=3.8
 
