--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,9 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    marketplace-standard-app-api==0.1.0
-    pika==1.2.1
-    requests~=2.26.0
+    marketplace-standard-app-api~=0.3
+    pika~=1.2
+    requests~=2.26
 python_requires = >=3.8
 
 [options.extras_require]
