--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    marketplace-standard-app-api==0.3.0
+    marketplace-standard-app-api~=0.3
     packaging==21.3
     pika==1.2.1
     requests~=2.26.0
