--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    fastapi==0.75.2
     marketplace-standard-app-api~=0.3
     packaging==21.3
     pika==1.2.1
