--- a/setup.cfg
+++ b/setup.cfg
@@ -25,8 +25,8 @@ install_requires =
     fastapi==0.75.2
     marketplace-standard-app-api~=0.3
     packaging==21.3
-    pika==1.2.1
-    requests~=2.26.0
+    pika~=1.2
+    requests~=2.26
 python_requires = >=3.8
 
 [options.extras_require]
