--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
 commit_message = "Bump version {old_version} -> {new_version}"
 commit = True
 tag = True
-push = False
+push = True
 
 [bumpver:file_patterns]
 marketplace/version.py =
