--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     marketplace-standard-app-api~=0.3
     packaging==21.3
     pika~=1.2
+    python-keycloak==2.6.0
     requests~=2.26
 python_requires = >=3.8
 
