--- a/setup.cfg
+++ b/setup.cfg
@@ -38,9 +38,12 @@ tests =
 
 [flake8]
 ignore =
-    E501  # Line length handled by black.
-    W503  # Line break before binary operator, preferred formatting for black.
-    E203  # Whitespace before ':', preferred formatting for black.
+    # Line length handled by black.
+    E501
+    # Line break before binary operator, preferred formatting for black.
+    W503
+    # Whitespace before ':', preferred formatting for black.
+    E203
 
 [bumpver]
 current_version = "v0.1.1"
