--- a/setup.cfg
+++ b/setup.cfg
@@ -19,11 +19,11 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    fastapi==0.75.2
-    marketplace-standard-app-api~=0.3
-    packaging==21.3
+    fastapi>0.75,<1.0
+    marketplace-standard-app-api~=0.4
+    packaging>=21.3,<=23.0
     pika~=1.2
-    requests~=2.26
+    requests>2.26.0,<3.0
 python_requires = >=3.8
 
 [options.extras_require]
