--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ exclude examples
 recursive-exclude examples *
 
 exclude .pre-commit-config.yaml
-exclude .gitlab-ci.yml
+exclude .flake8
 
 include LICENSE
 include README.md
