--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    fastapi>0.75,<1.0
+    fastapi>0.75,<=0.95.1
     marketplace-standard-app-api~=0.4
     packaging>=21.3,<=23.0
     pika~=1.2
