keycloak authentication and datasink rename

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,18 +31,18 @@ python_requires = >=3.8
 
 [options.entry_points]
 console_scripts =
-    list_collections = marketplace.data_sink_client.cli:list_collections
-    list_datasets = marketplace.data_sink_client.cli:list_datasets
-    get_collection_dcat = marketplace.data_sink_client.cli:get_collection_dcat
-    get_dataset_dcat = marketplace.data_sink_client.cli:get_dataset_dcat
-    delete_dataset = marketplace.data_sink_client.cli:delete_dataset
-    delete_collection = marketplace.data_sink_client.cli:delete_collection
-    upload_file_from_path = marketplace.data_sink_client.cli:upload_file_from_path
-    upload_folder = marketplace.data_sink_client.cli:upload_files_from_folder
-    download_folder = marketplace.data_sink_client.cli:download_folder
-    download_file = marketplace.data_sink_client.cli:download_file
-    query = marketplace.data_sink_client.cli:query
-    query_dataset = marketplace.data_sink_client.cli:query_dataset
+    list_collections = marketplace.datasink_client.cli:list_collections
+    list_datasets = marketplace.datasink_client.cli:list_datasets
+    get_collection_dcat = marketplace.datasink_client.cli:get_collection_dcat
+    get_dataset_dcat = marketplace.datasink_client.cli:get_dataset_dcat
+    delete_dataset = marketplace.datasink_client.cli:delete_dataset
+    delete_collection = marketplace.datasink_client.cli:delete_collection
+    upload_file_from_path = marketplace.datasink_client.cli:upload_file_from_path
+    upload_folder = marketplace.datasink_client.cli:upload_files_from_folder
+    download_folder = marketplace.datasink_client.cli:download_folder
+    download_file = marketplace.datasink_client.cli:download_file
+    query = marketplace.datasink_client.cli:query
+    query_dataset = marketplace.datasink_client.cli:query_dataset
 
 [options.extras_require]
 dev =
