--- a/.env_template
+++ b/.env_template
@@ -1,5 +1,5 @@
 # Marketplace URL
-MP_HOST="https://dataspace.reaxpro.eu"
+MP_HOST="https://materials-marketplace.eu/"
 # Access token for markeplace connection. Need to change time to time when expired
 MP_ACCESS_TOKEN=....
 
@@ -8,7 +8,9 @@ MP_ACCESS_TOKEN=....
 CLIENT_ID="2c791805-ea52-4446-af97-80c0355a73b4"
 
 # optional: if incase if we want to get access_token directly from key_cloak
-KEYCLOAK_SERVER_URL="https://dataspace.reaxpro.eu/auth/"
+# keycloak configuration details can be obtained from marketplace admin
+# you can ignore setting MP_ACCESS_TOKEN if you configure keycloak authentication
+KEYCLOAK_SERVER_URL="https://materials-marketplace.eu/"
 KEYCLOAK_CLIENT_ID=....
 KEYCLOAK_REALM_NAME=....
 KEYCLOAK_CLIENT_SECRET_KEY=....
