remove default client_id

--- a/.env_template
+++ b/.env_template
@@ -5,7 +5,7 @@ MP_ACCESS_TOKEN=....
 
 # Env variables needed for data-sink connection otherwise optional
 # Client-ID of the datasink application
-CLIENT_ID="2c791805-ea52-4446-af97-80c0355a73b4"
+CLIENT_ID=....
 
 # optional: if incase if we want to get access_token directly from key_cloak
 # keycloak configuration details can be obtained from marketplace admin
